--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=DFRobot_OxygenSensor
-version=1.0.0
+version=1.0.1
 author=DFRobot
 maintainer=ZhixinLiu <zhixin.liu@dfrobot.com>
-sentence=DFRobot Standard library.
-paragraph=DFRobot_OxygenSensor is the standard library of DFRobot.
+sentence=Standard library for DFRobot oxygen sensor.(SKU:SEN0322)
+paragraph=DFRobot_oxygenSensor Measuring range: 0~25% Vol.
 category=Sensors
 url=https://github.com/DFRobot/DFRobot_OxygenSensor
 architectures=*
